--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,22 +12,93 @@
 		font-family: 'Balsamiq Sans', cursive;
 		background-color: rgb(156, 156, 154);
 		font-size: 25px;
+		box-shadow: 5px 5px 10px #272626
 	}
 	body {
 		padding-top: 50px;
-		background-color: rgb(199, 198, 198);
+		background-image: url('https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fgetwallpapers.com%2Fwallpaper%2Ffull%2Ff%2F8%2F4%2F990861-free-download-neutral-backgrounds-2560x1600-for-full-hd.jpg&f=1&nofb=1');
 		font-size: 20px;
 	}
 	footer {
 		background-color: rgb(156, 156, 154);
+		box-shadow: 5px 5px 10px #272626
 	}
 	h1 {
-		color: rgb(34, 33, 33);
+		color: rgb(8, 8, 8);
 		font-family: 'Balsamiq Sans', cursive;
 		font-size: 33px;
 	}
-	p {
+	h2 {
+		color: rgb(8, 8, 8);
 		font-family: 'Balsamiq Sans', cursive;
 	}
+	p {
+		color: rgb(8, 8, 8);
+		font-family: 'Balsamiq Sans', cursive;
+	}
+	.card-text {
+		font-family: 'Balsamiq Sans', cursive;
+		background-color: 156,156,154;
+	}
+	.card-body {
+		color: rgb(238, 238, 235);
+		box-shadow: 5px 5px 10px #272626;
+		background-color: 156,156,154;
+	}
+	a {
+		width: small;
+		height: 50px;
+		text-align: center;
+		vertical-align: middle;
+	}
+	i {
+		width: small;
+		height: 50px;
+		text-align: center;
+		vertical-align: middle;
+	}
+	.card-img-top {
+		box-shadow: 5px 5px 10px #272626;
+	}
+	.mb-3 {
+		font-family: 'Balsamiq Sans', cursive;
+		box-shadow: 10px 10px 10px #272626;
+		background-color:rgb(219, 213, 213);
+		text-align: left;
+	}
+	.mb-2 {
+		text-align: left;
+		text-shadow: skyblue;
+	}
+	.form-label {
+		color:rgb(59, 58, 58);
+		text-align: left; 
+		text-shadow: skyblue
+	}
+	.fa {
+		padding: 20px;
+		font-size: 30px;
+		width: 50px;
+		text-align: center;
+		text-decoration: none;
+		}
 
+	/* Add a hover effect if you want */
+	.fa:hover {
+		opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+	.fa-facebook {
+		background: #3B5998;
+		color: white;
+	}
+
+	/* Twitter */
+	.fa-twitter {
+		background: #55ACEE;
+		color: white;
+	}
 </style>
