--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -13,11 +13,15 @@
 
 		<main>
 			<div class="container">
-				<h1>Welcome to G.Zero LLC.</h1>
+				<h1>Welcome to G.Zero Space Camp.</h1>
 				<h2>Where space travel comes to life!.</h2>
+				&nbsp;&nbsp;
+				
 				 &nbsp;&nbsp;<!--makes an extra space-->
-				<p>
-					Look again at that dot. That's here. That's home. That's us. On it everyone you love, everyone you know, everyone you ever heard of, every human being who ever was, lived out their lives. The aggregate of our joy and suffering, thousands of confident religions, ideologies, and economic doctrines, every hunter and forager, every hero and coward, every creator and destroyer of civilization, every king and peasant, every young couple in love, every mother and father, hopeful child, inventor and explorer, every teacher of morals, every corrupt politician, every "superstar," every "supreme leader," every saint and sinner in the history of our species lived there--on a mote of dust suspended in a sunbeam.
+				 
+				<p>					
+					...Look again at that dot. That's here. That's home. That's us. On it everyone you love, everyone you know, everyone you ever heard of, every human being who ever was, lived out their lives. The aggregate of our joy and suffering, thousands of confident religions, ideologies, and economic doctrines, every hunter and forager, every hero and coward, every creator and destroyer of civilization, every king and peasant, every young couple in love, every mother and father, hopeful child, inventor and explorer, every teacher of morals, every corrupt politician, every "superstar," every "supreme leader," every saint and sinner in the history of our species lived there--on a mote of dust suspended in a sunbeam.
+					
 				</p>
 
 				<p>
@@ -33,7 +37,9 @@
 				</p>
 				<p>
 					It has been said that astronomy is a humbling and character-building experience. There is perhaps no better demonstration of the folly of human conceits than this distant image of our tiny world. To me, it underscores our responsibility to deal more kindly with one another, and to preserve and cherish the pale blue dot, the only home we've ever known.
+					
 				</p>
+				
 			</div>
 		</main>
 
