--- a/views/pages/directory.ejs
+++ b/views/pages/directory.ejs
@@ -19,12 +19,13 @@
 			 	<% employees.forEach(function(employee){ %>
             	<p><div class="card" style="width: 18rem;">
 					<img src="<%= employee[1].picture %>" class="card-img-top" alt="...">
-					<div class="card-body">
+					<div class="card-body" style="font-size: larger; background-color: gray;">
 					  <p class="card-text"><%= employee[1].firstName %> <%= employee[1].lastName %></p>
 					  <p class="card-text"><%= employee[1].email %></p>
-					  <a class="btn btn-primary mtn-sm" href="directory/<%= employee[0]%>">View Profile</a>
-					  <a class="btn btn-primary mtn-sm" href="update/<%= employee[0]%>">Edit</a>
-					  <a class="btn btn-primary mtn-sm" href="delete/<%= employee[0]%>">Delete</a>
+					  <a class="btn btn-secondary mtn-sm" href="directory/<%= employee[0]%>";">View Profile</a>
+					  <a class="btn btn-info mtn-sm" href="update/<%= employee[0]%>">Edit</a>
+					  <a class="btn btn-danger" href="delete/<%= employee[0]%>"style="height:85px;width:85px">
+						<i class="fa fa-trash-o fa-lg"></i>Delete</a>
 					</div>
 				  </div></p>
                 <% }); %>					
