--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,6 +10,7 @@
 			<div class="container">
 				<h1>G.ZERO SPACE CAMP</h1>
 				<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages.fineartamerica.com%2Fimages-medium-large%2Fspaceship-take-off-victor-habbick-visions.jpg&f=1&nofb=1" alt="Girl in a jacket" width="500" height="600"> 
+				&nbsp;&nbsp;
 				<p>
 					Welcome to G.Zero's homepage. We are happy you have joined us, so hold on and buckle up.
 					We will take you through a journey of the unknown frontier...
