--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,12 @@
+<!-- Add icon library -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<i class="fa fa-github" aria-hidden="true" href="https://github.com/nate4t/SPA-Project-MOD4"></i>
+
+<a href="https://github.com/nate4t/SPA-Project-MOD4" class="fa fa-facebook"></a>
+<a href="https://github.com/nate4t/SPA-Project-MOD4" class="fa fa-twitter"></a>
+<img src=""
 <p class="text-center text-muted">
 	&copy; 2020 G.Zero LLC
 </p>
+
