--- a/views/pages/create_employee.ejs
+++ b/views/pages/create_employee.ejs
@@ -7,28 +7,47 @@
       <header><%- include('../partials/header'); %></header>
         <div class="container pt-5">
           <div class="row justify-content-between"></div>
-            <h1>Add Employee</h1>
+            <h1 style="text-align: center;">Add Employee</h1>
          <div class="bg-light p-2 rounded border my-5">
           <!-- <h2>Add Employee</h2> -->
             <form id="createEmployee" action="/create_employee" method="post">
               <div class="mb-3">
                 <div class="mb-2">  <label for="input-firstName" class="form-label">First Name:</label>
-                  <input type="text" name="user[firstName]"></div>
+                  <input type="text" name="user[firstName]" required></div><!--require each field w/function below-->
                 <div class="mb-2">  <label for="input-lastName" class="form-label">Last Name:</label>
-                  <input type="text" name="user[lastName]"></div>
+                  <input type="text" name="user[lastName]" required></div>
                 <div class="mb-2"><label for="user[input-email]" class="form-label">Email:</label>
-                  <input type="text" name="user[email]"></div>
+                  <input type="text" name="user[email]" required></div>
                 <div class="mb-2">   <label for="input-id" class="form-label">ID:</label>
-                  <input type="text" name="user[id]"></div>
+                  <input type="text" name="user[id]" required></div>
                <div class="mb-2"> <label for="input-picture" class="form-label">Picture:</label>
-                 <input type="text" name="user[picture]"></div>
+                 <input type="text" name="user[picture]" required></div>
                <div class="mb-2"> <label for="input" class="form-label">Title:</label>
-                  <input type="text-title" name="user[title]"></div>
+                  <input type="text-title" name="user[title]" required></div>
                 <input type="submit" value="Submit" href="/success">
+              </form>
                 <script>
-                </script>
-                
-            </form>
+                  // Example starter JavaScript for disabling form submissions if there are invalid fields
+                    (function () {
+                      'use strict'
+
+                      // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                      var forms = document.querySelectorAll('.needs-validation')
+
+                      // Loop over them and prevent submission
+                      Array.prototype.slice.call(forms)
+                        .forEach(function (form) {
+                          form.addEventListener('submit', function (event) {
+                            if (!form.checkValidity()) {
+                              event.preventDefault()
+                              event.stopPropagation()
+                            }
+
+                            form.classList.add('was-validated')
+                          }, false)
+                        })
+                    })()
+                    </script>                
          </div>
         </div>
     </main>
