--- a/views/pages/edit.ejs
+++ b/views/pages/edit.ejs
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
     <head>
 		<%- include('../partials/head'); %>
-	</head>
-    <main>
+    </head>
+  <body>
         <header><%- include('../partials/header'); %></header>
+  <main>
         <div class="container pt-5">
             <h1>Edit Employee</h1>
-            <!-- <p>Using the submit button we will send a POST request to the database and then display a success message. </p> -->
+         <p>Using the submit button we will send a POST request to the database and then display a success message. </p>
          <div class="bg-light p-2 rounded border my-5">
           
-            <!-- <h2>Edit Employee: First Name</h2> -->
+            <h2>Edit Employee: First Name</h2>
             <p> <div class="card" style="width: 18rem;">
 ​              <a href=`/directory/${id}`</a>
               <img src="<%= employee.picture %>" class="card-img-top" alt="...">
@@ -18,28 +19,42 @@
                 <p class="card-text"><%= employee.firstName %> <%= employee.lastName %></p>
                 <p class="card-text"><%= employee.email %></p>
                 <button type="button" id="edit" href="directory/<%= employee.id%>/edit">Edit</button>
-                <button type="button" id="delete" href="directory/<%= employee.id%>/delete">Delete</button> -->
+                <button type="button" id="delete" href="directory/<%= employee.id%>/delete">Delete</button>
             </div>
             </div></p>
             <form id="update-employee-form" action="/update/:uid" method="post">
               <div class="mb-3">
                 <div class="mb-2">  <label for="input-firstName" class="form-label">Update First Name:</label>
-                  <input type="text" name="user[firstName]"></div>
-                <!-- <div class="mb-2">  <label for="input-lastName" class="form-label">Last Name:</label>
-                  <input type="text" name="user[lastName]"></div>
-                <div class="mb-2"><label for="input-email" class="form-label">Email:</label>
-                  <input type="text" name="user[email]"></div>
-                <div class="mb-2">   <label for="input-id" class="form-label">ID:</label>
-                  <input type="text" name="user[id]"></div>
-               <div class="mb-2"> <label for="input-picture" class="form-label">Picture:</label>
-                 <input type="text" name="user[picture]"></div>
-               <div class="mb-2"> <label for="input" class="form-label">Title:</label>
-                  <input type="text-title" name="user[title]"></div> -->
-                <input type="submit" value="Submit" href="/success">
+                  <input type="text" name="user[firstName]" required></div><require field from function below-->
+                <!-- <input type="submit" value="Submit" href="/success">
+                <form action="/directory" method="GET" target="_blank"/><this will make a "get" request to the server and route back to the directory
+                      <button type="submit" class="btn btn-primary">Directory</button>
             </form>
+            <script>
+              // Example starter JavaScript for disabling form submissions if there are invalid fields
+                (function () {
+                  'use strict'
+                  // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                  var forms = document.querySelectorAll('.needs-validation');
+
+                  // Loop over them and prevent submission
+                  Array.prototype.slice.call(forms)
+                    .forEach(function (form) {
+                      form.addEventListener('submit', function (event) {
+                        if (!form.checkValidity()) {
+                          event.preventDefault()
+                          event.stopPropagation()
+                        }
+
+                        form.classList.add('was-validated')
+                      }, false)
+                    })
+                })()
+            </script>
          </div>
         </div>
-    </main>
+      </main>
+      </body>
     <footer><%- include('../partials/footer'); %></footer>
 </body>
-</html>
+</html> -->
