--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -26,7 +26,8 @@
 	h1 {
 		color: rgb(8, 8, 8);
 		font-family: 'Balsamiq Sans', cursive;
-		font-size: 33px;
+		font-size: 43px;
+		font-weight: bolder;
 	}
 	h2 {
 		color: rgb(8, 8, 8);
@@ -39,11 +40,13 @@
 	.card-text {
 		font-family: 'Balsamiq Sans', cursive;
 		background-color: 156,156,154;
+		font-size: 25px;
 	}
 	.card-body {
 		color: rgb(238, 238, 235);
 		box-shadow: 5px 5px 10px #272626;
-		background-color: 156,156,154;
+		text-shadow: yellowgreen;
+		background-color: gray;
 	}
 	a {
 		width: small;
@@ -58,7 +61,12 @@
 		vertical-align: middle;
 	}
 	.card-img-top {
+		/* border-top-left-radius:calc(.45rem); */
+		/* border-top-right-radius: calc(.45rem); */
+		/* border-bottom-right-radius: calc( .75rem); */
+		/* border-bottom-left-radius: calc(.75rem); */
 		box-shadow: 5px 5px 10px #272626;
+		
 	}
 	.mb-3 {
 		font-family: 'Balsamiq Sans', cursive;
@@ -69,6 +77,10 @@
 	.mb-2 {
 		text-align: left;
 		text-shadow: skyblue;
+	}
+	.container {
+		text-align: center;
+		
 	}
 	.form-label {
 		color:rgb(59, 58, 58);
