--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-primary">
 	
-	<ul class="navbar-nav mr-auto">
+	<ul class="navbar-nav">
 		<li class="nav-item">
 			<a class="nav-link" href="/">Home</a>
 		</li>
@@ -11,7 +11,7 @@
 			<a class="nav-link" href="/directory">Directory</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="/create_employee">Add Employee</a>
+			<a class="nav-link" href="/create_employee">Add Astronaut</a>
 		</li>
 		<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.LnhMI_RrmCVZccF8E_r8XQHaEK%26pid%3DApi&f=1" class="img-fluid" width="100px">
 	</ul>
