--- a/views/pages/create_employee.ejs
+++ b/views/pages/create_employee.ejs
@@ -13,17 +13,17 @@
             <form id="createEmployee" action="/create_employee" method="post">
               <div class="mb-3">
                 <div class="mb-2">  <label for="input-firstName" class="form-label">First Name:</label>
-                  <input type="text" name="user[firstName]" required></div><!--require each field w/function below-->
+                  <input type="text" name="user[firstName]" placeholder="First Name..." required></div><!--require each field w/function below-->
                 <div class="mb-2">  <label for="input-lastName" class="form-label">Last Name:</label>
-                  <input type="text" name="user[lastName]" required></div>
+                  <input type="text" name="user[lastName]" placeholder="Last Name" required></div>
                 <div class="mb-2"><label for="user[input-email]" class="form-label">Email:</label>
-                  <input type="text" name="user[email]" required></div>
+                  <input type="text" name="user[email]" placeholder="Email..." required></div>
                 <div class="mb-2">   <label for="input-id" class="form-label">ID:</label>
-                  <input type="text" name="user[id]" required></div>
+                  <input type="text" name="user[id]" placeholder="Id..." required></div>
                <div class="mb-2"> <label for="input-picture" class="form-label">Picture:</label>
-                 <input type="text" name="user[picture]" required></div>
+                 <input type="text" name="user[picture]" placeholder="Picture..." required></div>
                <div class="mb-2"> <label for="input" class="form-label">Title:</label>
-                  <input type="text-title" name="user[title]" required></div>
+                  <input type="text-title" name="user[title]" placeholder="Title..." required></div>
                 <input type="submit" value="Submit" href="/success">
               </form>
                 <script>
