--- a/views/pages/update.ejs
+++ b/views/pages/update.ejs
@@ -25,11 +25,11 @@
             <form id="update-employee-form" action="/update/:uid" method="post">
               <div class="mb-3">
                 <div class="mb-2">  <label for="input-firstName" class="form-label">Update First Name:</label>
-                  <input type="text" name="user[firstName]" required></div><!--require field from function below-->
-                <input type="submit" value="Submit" href="/success">
-                <form action="/success" method="GET" target="_blank"/> <!--this will make a "get" request to the server and route back to the directory -->
-                      <button type="submit" class="btn btn-primary">Directory</button>
-            </form>
+                  <input type="text" placeholder="First Name..." name="user[firstName]" required></div><!--require field from function below-->
+                  <input type="submit" value="Submit" href="/directory">
+                <!-- <form action="/success" method="GET" target="_blank"/> <!--this will make a "get" request to the server and route back to the directory -->
+                      <!-- <button type="submit" class="btn btn-primary">Directory</button> -->
+                <!-- </form> -->
             <script>
               // Example starter JavaScript for disabling form submissions if there are invalid fields
                 (function () {
