final final version

--- a/views/pages/create_employee.ejs
+++ b/views/pages/create_employee.ejs
@@ -7,7 +7,7 @@
       <header><%- include('../partials/header'); %></header>
         <div class="container pt-5">
           <div class="row justify-content-between"></div>
-            <h1 style="text-align: center;">Add Employee</h1>
+            <h1 style="text-align: center;">Add Astronaut</h1>
          <div class="bg-light p-2 rounded border my-5">
           <!-- <h2>Add Employee</h2> -->
             <form id="createEmployee" action="/create_employee" method="post">
